# SPUE

./: CMakeLists.txt  test.sh
command/: main.c
linked_list/: main.c
prime/: main.c
readfile/: main.c
signals/: main.c
sockets/: main.c
struct/: main.c
tests/command/: input_1  input_3
tests/linked_list/: expected_1
tests/prime/: expected_1
tests/struct/: expected_1  input_1
